# May

./: .gitmodules  LICENSE  README.md
client/: .gitignore  README.md  rebar.config
client/3pp/libBERT/include/: bert.h
client/cert/: ca.key  ca.pem  client.key
client/config/: client.conf
client/csrc/: Buffer.cc  Buffer.h  CMakeCache.txt  CMakeLists.txt  CallbackHandler.h  Envoy.h  EnvoyTcp.cc  EnvoyTcp.h  EventHandler.cc  EventHandler.h  EventHandlerOwner.h  EventHandlerTable.cc  EventHandlerTable.h  Logger.h  Makefile  Service.cc  Service.h  TcpClient.cc  TcpClient.h  TcpClientOwner.h  TcpConnection.cc  TcpConnection.h  cmake_install.cmake
client/csrc/test/: May_test.history  core  json  json.cc  reg_dereg  reg_dereg.cc  test  test_note  watch  watch.cc
client/esrc/: agent.erl  client.conf  client.hrl  client_app.erl  client_sup.erl  reception.erl  reception_rest.erl  reception_tcp.erl  reception_ux.erl  receptionist.erl  receptionist_sup.erl  receptionist_tcp.erl  receptionist_tcp_sup.erl  receptionist_ux.erl  receptionist_ux_sup.erl
client/src/: agent.erl  client.hrl  client_sup.erl  reception.erl
server/: rebar.config
server/Mnesia.nonode@nohost/: service.DCD
server/cert/: cacert.pem  server.csr  server.key
server/config/: server.conf
server/src/: reception.erl  receptionist.erl  receptionist_sup.erl  server.conf  server.hrl  server_app.erl  server_sup.erl
test/cert/: cert_generator.sh  client.csr
test/cert/ca/: ca.srl
test/cert/ca/private/: ca.key
test/cert/client/: client.csr  client.pem
test/cert/server/: server.csr  server.pem
(+2 files in other folders)
